# openai-utils

./: .gitignore  Cargo.toml
src/: chat_completion.rs  chat_completion_delta.rs  chat_completion_request.rs  error.rs  lib.rs
