[package]
name = "ai-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
openai-rust = "0.5.1"
proc-macro2 = "1.0.66"
serde = "1.0.188"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
