[package]
name = "openai-utils"
version = "0.3.3"
edition = "2021"
description = "utilities for using the openai api"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"] }
reqwest-eventsource = "0.5.0"
schemars = "0.8.15"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
tiktoken-rs = "0.5.6"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.48"
